--- a/HuracanPage.html
+++ b/HuracanPage.html
@@ -9,14 +9,14 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
-      <title>TEST </title>
-
+      <title>Huracan | Lamborghini</title>
+      <link rel="icon" href="pictures/logo.webp">
 </head>
 
 <body>
       <header>
             <nav class="navbar">
-                  <a href="index.html"><img src="/pictures/logo.webp" class="logo"></a>
+                  <a href="index.html"><img src="pictures/logo.webp" class="logo"></a>
                 
                   <ul class="nav-links">
                         <li><a href="#" class="link-expand">Modelle</a>
@@ -50,26 +50,26 @@
             <section class="details-sec">
                   <div class="shape"></div>
                   <div class="sec-1">
-                        <img class="img-mob" src="/pictures/huracan/hur-mob.jpg" alt="revuelto" >
+                        <img class="img-mob" src="pictures/huracan/hur-mob.jpg" alt="revuelto" >
                         <div class="text-sec">
-                              <img src="/pictures/huracan/Huracán_logo.webp" alt="huracan">
+                              <img src="pictures/huracan/Huracán_logo.webp" alt="huracan">
                               <p>Der Lamborghini Huracán ist die goldene Mitte zwischen Technik und Design. 
                                     Bereits der einfache Anblick beschert ein erstes Feuerwerk der Emotionen. Klare, aerodynamische Linien, die die Luft durchschneiden und die Straße dominieren. Das zweite Gefühlsbad erfahren Sie, wenn Sie dieses Fahrzeug berühren. Bei der Ausführung der edlen und beispiellos hochwertigen Verarbeitungen kommt ausschließlich beste italienische Handwerkskunst zur Anwendung. Und noch höher wird Ihr Herz schlagen, wenn Sie den Startknopf drücken und spüren, was es heißt, einen V10-Saugmotor und die gesamte Technologie für dessen Steuerung zu kontrollieren. Der letzte emotionale Hochpunkt wird durch das Full-LED-Beleuchtungskonzept und das Armaturenbrett mit 12,3-Zoll-TFT-Display erzeugt, die Ihnen ein unvergleichliches Fahrerlebnis bieten.</p>
                         </div>
                         <div class="img-sec1">
-                              <img class="img-path-1" src="/pictures/huracan/Group4.png" alt="huracan-blue">
+                              <img class="img-path-1" src="pictures/huracan/Group4.png" alt="huracan-blue">
                         </div>
                   </div>
 
                   <div class="sec-2">
-                        <img class="img-path-2" src="/pictures/huracan/Group5.svg" alt="huracan">
-                        <img class="img-path-3" src="/pictures/huracan/Group6.svg" alt="huracan">
+                        <img class="img-path-2" src="pictures/huracan/Group5.svg" alt="huracan">
+                        <img class="img-path-3" src="pictures/huracan/Group6.svg" alt="huracan">
 
                   </div>
 
                   <div class="sec-3">
-                        <img class="img-mob" src="/pictures/huracan/hur-mob2.jpeg" alt="revuelto" >
-                        <img class="img-path-4" src="/pictures/huracan/Group7.svg" alt="huracan">
+                        <img class="img-mob" src="pictures/huracan/hur-mob2.jpeg" alt="revuelto" >
+                        <img class="img-path-4" src="pictures/huracan/Group7.svg" alt="huracan">
                         <div class="sec-3-text">
                               <h3>Design</h3>
                               <p>Mit seinen klaren und sinnlichen Linien basiert das Design des Huracán auf den sechseckigen scharfen Formen des Kohlenstoffatoms, während die DNA von Lamborghini sich unverkennbar in der durchgängigen Linie erkennen lässt, die das Profil nachzeichnet. Das Full-LED-Beleuchtungssystem taucht das Fahrzeug in ein ganz besonderes technologisches Licht, wodurch es auch im Dunkeln unverwechselbar ist. </p>
@@ -89,8 +89,8 @@
                         <div class="background-text">
                               <h2>huracan</h2>
                               <div class="carousel-auto">
-                                    <img class="car1 active" id='myImageCar' src="/pictures/huracan/hur-blue.svg" alt="urus-black">
-                                    <img class="car2" id='myImageCar2' src="/pictures/huracan/hur-green.svg" alt="urus-yellow">
+                                    <img class="car1 active" id='myImageCar' src="pictures/huracan/hur-blue.svg" alt="urus-black">
+                                    <img class="car2" id='myImageCar2' src="pictures/huracan/hur-green.svg" alt="urus-yellow">
                               </div>
                              
                         </div>
@@ -112,16 +112,16 @@
                         <li><a href="">Datenschutz und impresium</a></li>
                   </ul>
                   <div class="icons">
-                        <img src="/pictures/facebook.png" alt="facebook">
-                        <img src="/pictures/instagram (1).png" alt="instagram">
+                        <img src="pictures/facebook.png" alt="facebook">
+                        <img src="pictures/instagram (1).png" alt="instagram">
                   </div>
                   <div class="f-text">
                         <h3>Copyright © 2023 made by Vlad Cuzub</h3>
                   </div>
             </div>
       </footer>
-      <script src="/javascript/navbar.js"></script>
-      <script src="/javascript/carousel-car.js"></script>
+      <script src="javascript/navbar.js"></script>
+      <script src="javascript/carousel-car.js"></script>
 </body>
 
 </html>
