--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
       <header>
             <nav class="navbar">
-                  <a href="#hero"><img src="/pictures/logo.webp" class="logo"></a>
+                  <a href="#hero"><img src="pictures/logo.webp" class="logo"></a>
 
                   <ul class="nav-links">
                         <li><a href="#" class="link-expand">Modelle</a>
@@ -85,16 +85,16 @@
                         <li><a href="">Datenschutz und impresium</a></li>
                   </ul>
                   <div class="icons">
-                        <img src="/pictures/facebook.png" alt="facebook">
-                        <img src="/pictures/instagram (1).png" alt="instagram">
+                        <img src="pictures/facebook.png" alt="facebook">
+                        <img src="pictures/instagram (1).png" alt="instagram">
                   </div>
                   <div class="f-text">
                         <h3>Copyright © 2023 made by Vlad Cuzub</h3>
                   </div>
             </div>
       </footer>
-      <script src="/javascript/navbar.js"></script>
-      <script src="/javascript/script.js"></script>
+      <script src="javascript/navbar.js"></script>
+      <script src="javascript/script.js"></script>
 </body>
 
 </html>
