--- a/HuracanPage.html
+++ b/HuracanPage.html
@@ -52,7 +52,7 @@
                   <div class="sec-1">
                         <img class="img-mob" src="pictures/huracan/hur-mob.jpg" alt="revuelto" >
                         <div class="text-sec">
-                              <img src="pictures/huracan/Huracán_logo.webp" alt="huracan">
+                              <img src="pictures/huracan/Huracánlogo.webp" alt="huracan">
                               <p>Der Lamborghini Huracán ist die goldene Mitte zwischen Technik und Design. 
                                     Bereits der einfache Anblick beschert ein erstes Feuerwerk der Emotionen. Klare, aerodynamische Linien, die die Luft durchschneiden und die Straße dominieren. Das zweite Gefühlsbad erfahren Sie, wenn Sie dieses Fahrzeug berühren. Bei der Ausführung der edlen und beispiellos hochwertigen Verarbeitungen kommt ausschließlich beste italienische Handwerkskunst zur Anwendung. Und noch höher wird Ihr Herz schlagen, wenn Sie den Startknopf drücken und spüren, was es heißt, einen V10-Saugmotor und die gesamte Technologie für dessen Steuerung zu kontrollieren. Der letzte emotionale Hochpunkt wird durch das Full-LED-Beleuchtungskonzept und das Armaturenbrett mit 12,3-Zoll-TFT-Display erzeugt, die Ihnen ein unvergleichliches Fahrerlebnis bieten.</p>
                         </div>
