media queries fix car pictures

--- a/HuracanPage.html
+++ b/HuracanPage.html
@@ -82,11 +82,11 @@
                         </div>
                         <div class="controls">
                               <div class="buttons">
-                              <button class="btn11">←</button>
-                              <button class="btn22">→</button>
+                              <button class="btn22">←</button>
+                              <button class="btn11">→</button>
                               </div>
                         </div>
-                        <div class="background-text">
+                        <div class="carousel-sec">
                               <h2>huracan</h2>
                               <div class="carousel-auto">
                                     <img class="car1 active" id='myImageCar' src="pictures/huracan/hur-blue.svg" alt="urus-black">
