--- a/RevueltoPage.html
+++ b/RevueltoPage.html
@@ -79,7 +79,7 @@
                         <div class="title">
                               <h2 class="title-rev">Hybrid-Supersportwagen</h2>
                         </div>
-                        <div class="background-text">
+                        <div class="carousel-sec">
                               <h2>Revuelto</h2>
                               <div class="carousel-auto">
                                     <img class="car1 active" id='myImageCar' src="pictures/revuelto/lm.svg" alt="revuelto">
