--- a/UrusPage.html
+++ b/UrusPage.html
@@ -95,7 +95,7 @@
                               <button class="btn11">→</button>
                         </div>
                         </div>
-                        <div class="background-text">
+                        <div class="carousel-sec">
                               <h2>urus</h2>
                               <div class="carousel-auto">
                                     <img class="car1 active " id='myImageCar' src="pictures/urus/black-u.svg"
@@ -108,8 +108,6 @@
                               <h4 class="model-text1 active">Urus s</h4>
                               <h4 class="model-text2">Urus Performance</h4>
                         </div>
-
-
                   </div>
             </section>
       </main>
