--- a/UrusPage.html
+++ b/UrusPage.html
@@ -16,7 +16,7 @@
 <body>
       <header>
             <nav class="navbar">
-                  <a href="index.html"><img src="pictures/logo.webp" class="logo"></a>
+                  <a href="index.html"><img src="pictures/logo.webp" class="logo" alt="A lamborghini logo"></a>
                 
                   <ul class="nav-links">
                         <li><a href="#" class="link-expand">Modelle</a>
@@ -52,7 +52,7 @@
                   <div class="sec-1">
                         <img class="img-mob" src="pictures/urus/urus-green-mob.jpg" alt="urus-green" >
                         <div class="text-sec">
-                              <img src="pictures/urus/urus-logo.webp" alt="urus">
+                              <img src="pictures/urus/urus-logo.webp" alt="urus logo">
                               <p>Der Lamborghini Urus ist das erste Super Sport Utility Vehicle der Welt, das die Seele
                                     eines Supersportwagens mit der praktischen Funktionalität eines SUV vereint. Mit
                                     seinem 4,0-Liter-V8-Biturbomotor ist der Urus konsequent leistungsorientiert
@@ -67,13 +67,13 @@
                   </div>
 
                   <div class="sec-2">
-                         <div class="1"> <img class="img-path-3" src="pictures/urus/urus-interior.svg" alt="urus-interior"></div>    
-                        <div class="2"><img class="img-path-2" src="pictures/urus/Group2.svg" alt="grey-urus"></div>      
+                         <img class="img-path-3" src="pictures/urus/urus-interior.svg" alt="urus interior">
+                       <img class="img-path-2" src="pictures/urus/Group2.svg" alt="urus-yellow urus">   
                   </div>
 
                   <div class="sec-3">
-                        <img class="img-path-4" src="pictures/urus/Group3.svg" alt="grey-urus">
-                        <img class="img-mob" src="pictures/urus/urus_gate_mob.jpg" alt="grey-urus">
+                        <img class="img-path-4" src="pictures/urus/Group3.svg" alt="yellow urus">
+                        <img class="img-mob" src="pictures/urus/urus_gate_mob.jpg" alt="grey urus">
                         <div class="sec-3-text">
                               <h3>Design</h3>
                               <p>Der Lamborghini Urus ist das erste Super Sport Utility Vehicle der Welt, das die Seele
@@ -99,8 +99,8 @@
                               <h2>urus</h2>
                               <div class="carousel-auto">
                                     <img class="car1 active " id='myImageCar' src="pictures/urus/black-u.svg"
-                                          alt="urus-black">
-                                    <img class="car2" id='myImageCar2' src="pictures/urus/yel-u.svg" alt="urus-yellow">
+                                          alt=" black urus">
+                                    <img class="car2" id='myImageCar2' src="pictures/urus/yel-u.svg" alt="yellow urus">
                               </div>
 
                         </div>
@@ -120,8 +120,8 @@
                         <li><a href="">Datenschutz und impresium</a></li>
                   </ul>
                   <div class="icons">
-                        <img src="pictures/facebook.png" alt="facebook">
-                        <img src="pictures/instagram (1).png" alt="instagram">
+                        <img src="pictures/facebook.png" alt="facebook logo">
+                        <img src="pictures/instagram (1).png" alt="instagram logo">
                   </div>
                   <div class="f-text">
                         <h3>Copyright © 2023 made by Vlad Cuzub</h3>
