--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
       <header>
             <nav class="navbar">
-                  <a href="#hero"><img src="pictures/logo.webp" class="logo"></a>
+                  <a href="#hero"><img src="pictures/logo.webp" class="logo" alt="A lamborghini logo"></a>
 
                   <ul class="nav-links">
                         <li><a href="#" class="link-expand">Modelle</a>
